Create url by api request
