# routes/api.php
@@ -2,12 +2,18 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\ShortUrlController;
 
 Route::prefix('auth')->controller(AuthController::class)->group(function () {
-    Route::post('register', 'register');
-    Route::post('login', 'login');
+    Route::controller(AuthController::class)->group(function () {
+        Route::post('register', 'register');
+        Route::post('login', 'login');
+        Route::post('logout', 'logout')->middleware('auth:sanctum');
+    });
+});
 
-    Route::middleware('auth:sanctum')->group(function () {
-        Route::post('logout', 'logout');
+Route::middleware('auth:sanctum')->group(function () {
+    Route::controller(ShortUrlController::class)->group(function () {
+        Route::post('url-short', 'store');
     });
 });
